[package]
name = "csv2json"
description = "Converts CSVs into JSON documents"
license = "MIT"
version = "0.3.1"
authors = ["Daniel Mason <daniel.mason@apolitical.co>"]
repository = "https://github.com/apolitical/csv2json"
readme = "README.md"
keywords = ["csv", "json", "cli"]
categories = ["command-line-interface", "data-structures"]

[dependencies]
clap = "^2.33"
csv = "^1.0"
serde = "^1.0"
serde_json = "^1.0"
strfmt = "0.1.6"
